--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerTemplate.ProductsInGridOrLines.Mobile.cshtml
@@ -61,8 +61,11 @@
             </div>
         }
 
-        @Html.SmartStore().Pager(Model.PagingFilteringContext).Name("pagination-bottom").QueryParam("pagenumber")
+        @(Html.SmartStore().Pager(Model.PagingFilteringContext).WithRenderer<MobilePagerRenderer>().Name("pagination-bottom").QueryParam("pagenumber"))
 
+                                                                                                                                  
+                                                                                                                                                  
         @Html.Widget("mobile_manufacturerdetails_bottom")
+
     </div>
 </div>
