* jQuery Mobile is updated to 1.3.2 * Mobile: Shop logo is now displayed at the top of the mobile page * Mobile: legal hints are shown in the footer

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -19,6 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     @*This is used so that themes can inject content into the header*@
     @Html.Partial("Head")
+    @Html.Partial("_ClientRes")
     @Html.Widget("mobile_head_html_tag")
 
     @Html.SmartCssFiles(this.Url, ResourceLocation.Head)
