--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Notifications.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_Notifications.cshtml
@@ -28,7 +28,7 @@
     {
         infoMessages.AddRange(TempData[string.Format("sm.notifications.{0}", NotifyType.Info)] as IList<string>);
     }
-    if (ViewData[string.Format("sm.notifications.{0}", NotifyType.Error)] != null)
+    if (ViewData[string.Format("sm.notifications.{0}", NotifyType.Info)] != null)
     {
         infoMessages.AddRange(ViewData[string.Format("sm.notifications.{0}", NotifyType.Info)] as IList<string>);
     }
