--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -958,6 +958,9 @@ form.form-search {
         background-image: url('images/deliv-bg-aero.png');
 	}
 }
+.order-summary-content .delivery-time {
+    text-align: left;
+}
 
 .item-box .buttons {
 	text-align: center;
