--- a/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/Feed.Froogle/Views/FeedFroogle/Configure.cshtml
@@ -419,11 +419,11 @@
             @(Html.Telerik().Grid<GoogleProductModel>()
 				.Name("froogleproducts-grid")
 				.DataKeys(keys => {
-					keys.Add(x => x.ProductVariantId).RouteKey("ProductVariantId");
+					keys.Add(x => x.ProductId).RouteKey("ProductId");
 				})
 				.Columns(c => {
-					c.Bound(x => x.ProductVariantId).ReadOnly().Visible(false);
-					c.Bound(x => x.FullProductVariantName).ReadOnly().Visible(true).Width(440);
+					c.Bound(x => x.ProductId).ReadOnly().Visible(false);
+					c.Bound(x => x.ProductName).ReadOnly().Visible(true).Width(440);
 					c.Bound(x => x.GoogleCategory).ClientTemplate(Html.XEditableLink("GoogleCategory", "typeahead"));
 					c.Bound(x => x.Gender).ClientTemplate(Html.XEditableLink("Gender", "select2")).Width(100);
 					c.Bound(x => x.AgeGroup).ClientTemplate(Html.XEditableLink("AgeGroup", "select2")).Width(100);
