Product\ProductVariant refactoring of several catalog files

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
@@ -61,14 +61,15 @@
                 </div>
             </div>
             <div class="product-collateral">
-                <div class="product-variant-list">
+                @*UNDONE revise product-variant logic*@
+                @*<div class="product-variant-list">
                     @foreach (var variant in Model.ProductVariantModels)
                     {
                         var dataDictVariant = new ViewDataDictionary();
                         dataDictVariant.TemplateInfo.HtmlFieldPrefix = string.Format("variant_{0}", variant.Id);
                         @Html.Partial("_ProductVariantLine", variant, dataDictVariant)
                     }
-                </div>
+                </div>*@
                 @Html.Action("ProductSpecifications", "Catalog", new { productId = Model.Id })
                 <div class="clear">
                 </div>
