--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTierPrices.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTierPrices.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<ProductDetailsModel.ProductVariantModel.TierPriceModel>
+﻿@model IList<ProductDetailsModel.TierPriceModel>
 @using SmartStore.Web.Models.Catalog;
 @{
     var i = 0;
