--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantPrice.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantPrice.Mobile.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductDetailsModel.ProductVariantModel.ProductVariantPriceModel
+﻿@model ProductDetailsModel.ProductPriceModel
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Core.Infrastructure;
