--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.cshtml
@@ -112,14 +112,15 @@
                         
 			<div class="product-collateral clearfix">
                 <!--product variants-->
-                <div class="product-variant-list">
+                @*UNDONE revise product-variant logic*@
+                @*<div class="product-variant-list">
                     @foreach (var variant in Model.ProductVariantModels)
                     {
                         var dataDictVariant = new ViewDataDictionary();
                         dataDictVariant.TemplateInfo.HtmlFieldPrefix = string.Format("variant_{0}", variant.Id);
                         @Html.Partial("_ProductVariantLine", variant, dataDictVariant)
                     }
-                </div>
+                </div>*@
             </div>
 
 			<div class="clear"></div>
