--- a/src/Presentation/SmartStore.Web/Views/Catalog/_DownloadSample.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_DownloadSample.cshtml
@@ -1,11 +1,10 @@
-﻿@model ProductDetailsModel.ProductVariantModel
+﻿@model ProductDetailsModel
 @using SmartStore.Web.Models.Catalog;
 @if (Model.HasSampleDownload)
 {
     <div class="download-sample">
         <span class="download-sample-button">
-            
-            <a href="@Url.RouteUrl("GetSampleDownload", new { productvariantid = Model.Id })">@T("Products.DownloadSample")</a>
+            <a href="@Url.RouteUrl("GetSampleDownload", new { productid = Model.Id })">@T("Products.DownloadSample")</a>
         </span>
     </div>
 }
