--- a/src/Presentation/SmartStore.Web/Views/Catalog/_GiftCardInfo.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_GiftCardInfo.Mobile.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductDetailsModel.ProductVariantModel.GiftCardModel
+﻿@model ProductDetailsModel.GiftCardModel
 @using SmartStore.Web.Models.Catalog;
 @if (Model.IsGiftCard)
 {
