--- a/src/Presentation/SmartStore.Web/Views/Catalog/_GiftCardInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_GiftCardInfo.cshtml
@@ -1,5 +1,4 @@
-﻿@*codehint: sm-edit*@
-@model ProductDetailsModel.ProductVariantModel.GiftCardModel
+﻿@model ProductDetailsModel.GiftCardModel
 @using SmartStore.Web.Models.Catalog;
 @if (Model.IsGiftCard)
 {
