--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.Mobile.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<ProductDetailsModel.ProductVariantModel.ProductVariantAttributeModel>
+﻿@model IList<ProductDetailsModel.ProductVariantAttributeModel>
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Core.Infrastructure;
@@ -16,7 +16,7 @@
         <dl>
             @foreach (var attribute in Model)
             {
-                string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductVariantId, attribute.ProductAttributeId, attribute.Id);
+                string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductId, attribute.ProductAttributeId, attribute.Id);
                 string textPrompt = !string.IsNullOrEmpty(attribute.TextPrompt) ? attribute.TextPrompt : attribute.Name;
                 <dt><span class="text-prompt">
                     @textPrompt
