--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<ProductDetailsModel.ProductVariantModel.ProductVariantAttributeModel>
+﻿@model IList<ProductDetailsModel.ProductVariantAttributeModel>
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Core.Infrastructure;
@@ -15,7 +15,7 @@
         
     @foreach (var attribute in Model)
     {
-        string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductVariantId, attribute.ProductAttributeId, attribute.Id);
+        string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductId, attribute.ProductAttributeId, attribute.Id);
         string textPrompt = !string.IsNullOrEmpty(attribute.TextPrompt) ? attribute.TextPrompt : attribute.Name;
         <div class="control-group">
             <label class='control-label@(attribute.IsRequired ? " required" : "")' for="@(controlId)">@textPrompt</label>
@@ -145,7 +145,7 @@
                                 elFile = el.find('.uploaded-file');
 
                             $('#@clientId').fileupload({
-                                url: '@(Url.RouteUrl("UploadFileProductAttribute", new { productVariantId = @attribute.ProductVariantId, productAttributeId = @attribute.ProductAttributeId }))',
+                                url: '@(Url.RouteUrl("UploadFileProductAttribute", new { productId = @attribute.ProductId, productAttributeId = @attribute.ProductAttributeId }))',
                                 dataType: 'json',
                                 acceptFileTypes: new RegExp('@(allowedFileExtensions)', 'i'),
                                 done: function (e, data) {
