--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantLine.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantLine.Mobile.cshtml
@@ -1,23 +1,18 @@
-﻿@model ProductDetailsModel.ProductVariantModel
+﻿@model ProductDetailsModel
 @using SmartStore.Web.Models.Catalog;
-<div class="product-variant-line" data-productvariantid="@Model.Id">
-    @if (!String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
+<div class="product-variant-line" data-productid="@Model.Id">
+    @*UNDONE revise product-variant logic*@
+    @*@if (!String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
     {
         <div class="variant-picture">
             <img alt="@Model.PictureModel.AlternateText" src="@Model.PictureModel.ImageUrl"
                                     title="@Model.PictureModel.Title" />
         </div>
-    }
+    }*@
     @if (!String.IsNullOrWhiteSpace(Model.Name))
     {
         <div class="variant-name">
             @Model.Name
-        </div>
-    }
-    @if (!String.IsNullOrWhiteSpace(Model.Description))
-    {
-        <div class="variant-description">
-            @Html.Raw(Model.Description)
         </div>
     }
     @Html.Partial("_DownloadSample", Model)
@@ -28,7 +23,7 @@
         @Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)                  
     }
     <!--product SKU, manufacturer part number, stock info-->
-    @Html.Partial("_ProductVariant_SKU_Man_Stock", Model)
+    @Html.Partial("_SKU_Man_Stock", Model)
     <!--Back in stock subscription-->
     @Html.Partial("_ProductVariantBackInStockSubscription", Model)
     @{
@@ -39,7 +34,7 @@
     @{
         var dataDictPrice = new ViewDataDictionary();
         dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
-        @Html.Partial("_ProductVariantPrice", Model.ProductVariantPrice, dataDictPrice)
+        @Html.Partial("_ProductVariantPrice", Model.ProductPrice, dataDictPrice)
     }
     @{
         var dataDictAddToCart = new ViewDataDictionary();
