--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantLine.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantLine.cshtml
@@ -1,22 +1,22 @@
-﻿@*codehint: sm-edit*@
-@model ProductDetailsModel.ProductVariantModel
+﻿@model ProductDetailsModel
 @using SmartStore.Web.Models.Catalog;
 @{
     string leftContentWidth = (Model.ThumbDimensions + 20).ToString() + "px";
-    if (String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
-    {
-        leftContentWidth = "0";
-    }
+    //if (String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
+    //{
+    //    leftContentWidth = "0";
+    //}
 }
-<div class="product-variant-line" data-productvariantid="@Model.Id">
+<div class="product-variant-line" data-productid="@Model.Id">
     <div class="clearfix">
+    @*UNDONE revise product-variant logic*@
 
-    @if (!String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
+    @*@if (!String.IsNullOrWhiteSpace(Model.PictureModel.ImageUrl))
     {
         <div class="variant-picture equalized-column" data-equalized-column-name="pd">
             <img alt="@Model.PictureModel.AlternateText" src="@Model.PictureModel.ImageUrl" title="@Model.PictureModel.Title" />
         </div>
-    }
+    }*@
 
         <div class="variant-data equalized-column" data-equalized-column-name="pd" style="margin-left: @leftContentWidth">
             @if (!String.IsNullOrWhiteSpace(Model.Name))
@@ -25,17 +25,10 @@
                     @Model.Name
                 </div>
             }
-            @if (!String.IsNullOrWhiteSpace(Model.Description))
-            {
-                <div class="variant-description muted">
-                    @Html.Raw(Model.Description)
-                </div>
-            }
 
             <div class="row-fluid">
                 <div class="equalized-column span12" data-equalized-column-name="vld">
                     <div class="attributes" style="margin-right:40px">
-                        @*@Html.Partial("_ProductVariant_SKU_Man_Stock", Model)*@
 
                         <table>
                             @if (Model.ShowSku)
@@ -100,12 +93,12 @@
                             
                             @*Stock availability*@
                             
-                            <tr valign="top" class="stock attr-stock @(String.IsNullOrWhiteSpace(Model.StockAvailablity) ? "hide fade" : "")">
+                            <tr valign="top" class="stock attr-stock @(String.IsNullOrWhiteSpace(Model.StockAvailability) ? "hide fade" : "")">
                                 <td class="attr-label">
                                     <strong>@T("Products.Availability"):</strong>
                                 </td>
                                 <td class="value">
-                                    @Model.StockAvailablity
+                                    @Model.StockAvailability
                                 </td>
                             </tr>
                             
@@ -155,13 +148,13 @@
         }
         <div class="right-content equalized-column @spanClass" data-equalized-column-name="vlb">
             
-            @Html.Action("ProductTierPrices", "Catalog", new { productVariantId = Model.Id })
+            @Html.Action("ProductTierPrices", "Catalog", new { productId = Model.Id })
 
             <div class="quick-links">
                 @if (Model.HasSampleDownload)
                 {
                     <div>
-                        <a href="@Url.RouteUrl("GetSampleDownload", new { productvariantid = Model.Id })">
+                        <a href="@Url.RouteUrl("GetSampleDownload", new { productId = Model.Id })">
                             @T("Products.DownloadSample")
                             <i class="icon-download-alt"></i>
                         </a>
@@ -178,7 +171,7 @@
             
                         <script type="text/javascript">
                             $(".subscribe-for-back-in-stock").click(function () {
-                                $("#back-in-stock-subscription-modal .modal-body").html('<iframe id="iframe-backinstocksubsription" src="@Url.RouteUrl("BackInStockSubscribePopup", new { productVariantId = @Model.Id })" width="600" height="170" scrolling="no" frameBorder="0" />');
+                                $("#back-in-stock-subscription-modal .modal-body").html('<iframe id="iframe-backinstocksubsription" src="@Url.RouteUrl("BackInStockSubscribePopup", new { productId = @Model.Id })" width="600" height="170" scrolling="no" frameBorder="0" />');
                             });
                         </script>
             
