--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantPrice.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductVariantPrice.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductDetailsModel.ProductVariantModel.ProductVariantPriceModel
+﻿@model ProductDetailsModel.ProductPriceModel
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Core.Infrastructure;
@@ -9,12 +9,12 @@
 @using System.Text.RegularExpressions;
 @{
     string pattern = "(?<val>(\\d+[\\s\\,\\.]?)+)";
-    string replacement = String.Format("<span class=\"price-val-for-dyn-upd-{0}\">${{val}}</span> ", Model.ProductVariantId);  
+    string replacement = String.Format("<span class=\"price-val-for-dyn-upd-{0}\">${{val}}</span> ", Model.ProductId);  
 }
 @if (Model.DynamicPriceUpdate)
 {
     <script type="text/javascript">
-        var priceValForDynUpd_@(Model.ProductVariantId) = @(((float)(Model.PriceValue != Model.PriceWithDiscountValue ? Model.PriceWithDiscountValue : Model.PriceValue)).ToString(new CultureInfo("en-US")));
+        var priceValForDynUpd_@(Model.ProductId) = @(((float)(Model.PriceValue != Model.PriceWithDiscountValue ? Model.PriceWithDiscountValue : Model.PriceValue)).ToString(new CultureInfo("en-US")));
     </script>
 }
 <div class="prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
@@ -57,11 +57,9 @@
                 @Html.Raw(Model.Price)
             }
         </span>
-        
-        
-        
-            if (!String.IsNullOrWhiteSpace(Model.PriceWithDiscount))
-            {
+       
+        if (!String.IsNullOrWhiteSpace(Model.PriceWithDiscount))
+        {
         <br />
         @T("Products.Price.WithDiscount")<text>:</text>
         <span class="product-price" itemprop="price">
@@ -74,6 +72,6 @@
                 @Html.Raw(Model.PriceWithDiscount)
             }
         </span>
-            }
+        }
     }
 </div>
