--- a/src/Presentation/SmartStore.Web/Views/Catalog/_SKU_Man_Stock.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_SKU_Man_Stock.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductDetailsModel.ProductVariantModel
+﻿@model ProductDetailsModel
 @using SmartStore.Web.Models.Catalog;
 @*SKU*@
 @if (!String.IsNullOrWhiteSpace(Model.Sku) && Model.ShowSku)
